@@ -12,7 +12,11 @@ fi
 AC_PROG_INSTALL
 dnl dbm libs for use of an_to_ln
 AC_CHECK_LIB(util,main)
-AC_CHECK_LIB(crypt,crypt)
+save_LIBS="$LIBS"
+ LIBS=
+ AC_CHECK_LIB(crypt,crypt)
+ LOGINLIBS="$LOGINLIBS $LIBS"
+LIBS="$save_LIBS"
 dnl
 dnl AIX has them all; SCO might too
 AC_CHECK_LIB(odm,main,
